@@ -6,7 +6,7 @@ import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.*;
 
 import java.math.BigDecimal;
-import java.net.URL;
+import java.net.URI;
 import java.time.LocalDateTime;
 import java.util.List;
 import java.util.Set;
@@ -54,7 +54,7 @@ public class ProductControllerTest {
        ProductCategory style = new ProductCategory(3L, "testStyle", type, null, null, null, null);
        List<ProductMeasureValue> targetMeasures = List.of(new ProductMeasureValue(1L,new Measure(2L, "abv", LocalDateTime.of(2018, 1, 2, 3, 4), LocalDateTime.of(2019, 1, 2, 3, 4), 1), new BigDecimal("100"), new Product()));
 
-       Product product = new Product(1L, "testProduct", "testDescription", style, targetMeasures, new URL("http://www.test.com"), LocalDateTime.of(2020, 1, 2, 3, 4), LocalDateTime.of(2020, 1, 2, 3, 4), null, 1);
+       Product product = new Product(1L, "testProduct", "testDescription", style, targetMeasures, new URI("http://www.test.com"), LocalDateTime.of(2020, 1, 2, 3, 4), LocalDateTime.of(2020, 1, 2, 3, 4), null, 1);
 
        List<Product> productList = List.of(product);
        Page<Product> mPage = mock(Page.class);
@@ -115,7 +115,7 @@ public class ProductControllerTest {
        ProductCategory style = new ProductCategory(3L, "testStyle", type, null, null, null, null);
        List<ProductMeasureValue> targetMeasures = List.of(new ProductMeasureValue(1L,new Measure(2L, "abv", LocalDateTime.of(2018, 1, 2, 3, 4), LocalDateTime.of(2019, 1, 2, 3, 4), 1), new BigDecimal("100"), new Product()));
 
-       Product product = new Product(1L, "testProduct", "testDescription", style, targetMeasures, new URL("http://www.test.com"), LocalDateTime.of(2020, 1, 2, 3, 4), LocalDateTime.of(2020, 1, 2, 3, 4), LocalDateTime.of(2020, 1, 2, 3, 4), 1);
+       Product product = new Product(1L, "testProduct", "testDescription", style, targetMeasures, new URI("http://www.test.com"), LocalDateTime.of(2020, 1, 2, 3, 4), LocalDateTime.of(2020, 1, 2, 3, 4), LocalDateTime.of(2020, 1, 2, 3, 4), 1);
 
        doReturn(product).when(productService).getProduct(1L);
 
@@ -152,14 +152,14 @@ public class ProductControllerTest {
    @Test
    public void testAddProduct() throws Exception {
        List<AddProductMeasureValueDto> targetMeasuresDto = List.of(new AddProductMeasureValueDto(1L, new BigDecimal("100")));
-       AddProductDto addProductDto = new AddProductDto("testProduct", "testDescription", 2L, targetMeasuresDto, new URL("http://www.test.com"));
+       AddProductDto addProductDto = new AddProductDto("testProduct", "testDescription", 2L, targetMeasuresDto, new URI("http://www.test.com"));
 
        ProductCategory productClass = new ProductCategory(1L, "testClass", null, null, null, null, null);
        ProductCategory type = new ProductCategory(2L, "testType", productClass, null, null, null, null);
        ProductCategory style = new ProductCategory(3L, "testStyle", type, null, null, null, null);
        List<ProductMeasureValue> targetMeasures = List.of(new ProductMeasureValue(10L, new Measure(1L, "abv", LocalDateTime.of(2018, 1, 2, 3, 4), LocalDateTime.of(2019, 1, 2, 3, 4), 1), new BigDecimal("100"), new Product()));
 
-       Product product = new Product(1L, "testProduct", "testDescription", style, targetMeasures, new URL("http://www.test.com"), LocalDateTime.of(2020, 1, 2, 3, 4), LocalDateTime.of(2020, 1, 2, 3, 4), LocalDateTime.of(2020, 1, 2, 3, 4), 1);
+       Product product = new Product(1L, "testProduct", "testDescription", style, targetMeasures, new URI("http://www.test.com"), LocalDateTime.of(2020, 1, 2, 3, 4), LocalDateTime.of(2020, 1, 2, 3, 4), LocalDateTime.of(2020, 1, 2, 3, 4), 1);
 
        ArgumentCaptor<Product> addProductCaptor = ArgumentCaptor.forClass(Product.class);
 
@@ -205,14 +205,14 @@ public class ProductControllerTest {
    @Test
    public void testPutProduct() throws Exception {
        List<AddProductMeasureValueDto> targetMeasuresDto = List.of(new AddProductMeasureValueDto(1L, new BigDecimal("100")));
-       UpdateProductDto updateProductDto = new UpdateProductDto("testProduct", "testDescription", 2L, targetMeasuresDto, new URL("http://www.test.com"), 1);
+       UpdateProductDto updateProductDto = new UpdateProductDto("testProduct", "testDescription", 2L, targetMeasuresDto, new URI("http://www.test.com"), 1);
 
        ProductCategory productClass = new ProductCategory(1L, "testClass", null, null, null, null, null);
        ProductCategory type = new ProductCategory(2L, "testType", productClass, null, null, null, null);
        ProductCategory style = new ProductCategory(3L, "testStyle", type, null, null, null, null);
        List<ProductMeasureValue> targetMeasures = List.of(new ProductMeasureValue(1L,new Measure(1L, "abv", LocalDateTime.of(2018, 1, 2, 3, 4), LocalDateTime.of(2019, 1, 2, 3, 4), 1), new BigDecimal("100"), new Product()));
 
-       Product product = new Product(1L, "testProduct", "testDescription", style, targetMeasures, new URL("http://www.test.com"), LocalDateTime.of(2020, 1, 2, 3, 4), LocalDateTime.of(2020, 1, 2, 3, 4), LocalDateTime.of(2020, 1, 2, 3, 4), 1);
+       Product product = new Product(1L, "testProduct", "testDescription", style, targetMeasures, new URI("http://www.test.com"), LocalDateTime.of(2020, 1, 2, 3, 4), LocalDateTime.of(2020, 1, 2, 3, 4), LocalDateTime.of(2020, 1, 2, 3, 4), 1);
 
        ArgumentCaptor<Product> putProductCaptor = ArgumentCaptor.forClass(Product.class);
 
@@ -259,14 +259,14 @@ public class ProductControllerTest {
    @Test
    public void testPatchProduct() throws Exception {
        List<AddProductMeasureValueDto> targetMeasuresDto = List.of(new AddProductMeasureValueDto(1L, new BigDecimal("100")));
-       UpdateProductDto updateProductDto = new UpdateProductDto("testProduct", "testDescription", 2L, targetMeasuresDto, new URL("http://www.test.com"), 1);
+       UpdateProductDto updateProductDto = new UpdateProductDto("testProduct", "testDescription", 2L, targetMeasuresDto, new URI("http://www.test.com"), 1);
 
        ProductCategory productClass = new ProductCategory(1L, "testClass", null, null, null, null, null);
        ProductCategory type = new ProductCategory(2L, "testType", productClass, null, null, null, null);
        ProductCategory style = new ProductCategory(3L, "testStyle", type, null, null, null, null);
        List<ProductMeasureValue> targetMeasures = List.of(new ProductMeasureValue(1L,new Measure(1L, "abv", LocalDateTime.of(2018, 1, 2, 3, 4), LocalDateTime.of(2019, 1, 2, 3, 4), 1), new BigDecimal("100"), new Product()));
 
-       Product product = new Product(1L, "testProduct", "testDescription", style, targetMeasures, new URL("http://www.test.com"), LocalDateTime.of(2020, 1, 2, 3, 4), LocalDateTime.of(2020, 1, 2, 3, 4), LocalDateTime.of(2020, 1, 2, 3, 4), 1);
+       Product product = new Product(1L, "testProduct", "testDescription", style, targetMeasures, new URI("http://www.test.com"), LocalDateTime.of(2020, 1, 2, 3, 4), LocalDateTime.of(2020, 1, 2, 3, 4), LocalDateTime.of(2020, 1, 2, 3, 4), 1);
 
        ArgumentCaptor<Product> patchProductCaptor = ArgumentCaptor.forClass(Product.class);
 
