@@ -2,7 +2,7 @@ package io.company.brewcraft.dto;
 
 import static org.junit.jupiter.api.Assertions.*;
 
-import java.net.URL;
+import java.net.URI;
 import java.util.List;
 
 import org.junit.jupiter.api.BeforeEach;
@@ -26,7 +26,7 @@ public class ProductDtoTest {
         CategoryDto type = new CategoryDto();
         CategoryDto style = new CategoryDto();
         List<ProductMeasureValueDto> targetMeasures = List.of(new ProductMeasureValueDto());
-        URL imageSrc = new URL("http://www.test.com");
+        URI imageSrc = new URI("http://www.test.com");
         Integer version = 1;
 
         ProductDto productDto = new ProductDto(id, name, description, productClass, type, style, targetMeasures, imageSrc, version);
@@ -93,8 +93,8 @@ public class ProductDtoTest {
 
     @Test
     public void testGetSetImageSrc() throws Exception {
-        productDto.setImageSrc(new URL("http://www.test.com"));
-        assertEquals(new URL("http://www.test.com"), productDto.getImageSrc());
+        productDto.setImageSrc(new URI("http://www.test.com"));
+        assertEquals(new URI("http://www.test.com"), productDto.getImageSrc());
     }
 
     @Test
